--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barton & Nichol's - Car Repair Services</title>
+    <title>B&N</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to the external CSS file -->
 </head>
 <body>
     <div class="container">
         <div class="header">
             <img src="./assets/img1.jpg" alt="Header Image">
-            <h1>Barton & Nichol's</h1>
+            <h1>BARTON &amp; NICHOLS</h1>
         </div>
 
         <div class="contact-info">
