--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="./assets/img1.jpg" alt="Header Image">
+            <img src="./assets/new_img1.jpg" alt="Header Image">
             <h1>BARTON &amp; NICHOLS</h1>
         </div>
 
