--- a/index.html
+++ b/index.html
@@ -4,22 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barton & Nichols Ltd.</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<!-- Navbar Section -->
-<nav class="navbar">
-    <div class="navbar-container">
-        <div class="navbar-brand">
-            <h1 class="navbar-title">BARTON & NICHOLS Ltd.</h1>
-            <h2 class="navbar-subtitle">The Motor Body Repair Centre</h2>
+    <!-- Navbar Section -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">BARTON & NICHOLS Ltd</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#about">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="navbar-links">
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
+      </nav>
+
+    <!-- <nav class="navbar">
+        <div class="navbar-container">
+            <div class="navbar-brand">
+                <h1 class="navbar-title">BARTON & NICHOLS Ltd.</h1>
+                <h2 class="navbar-subtitle">The Motor Body Repair Centre</h2>
+            </div>
+            <div class="navbar-links">
+                <a href="#about">About</a>
+                <a href="#contact">Contact</a>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav> -->
 
 
     <section class="main-body">
@@ -85,6 +105,7 @@
     </div>
 </footer>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script>
     const date = new Date()
     const year = date.getFullYear()
