--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">BARTON & NICHOLS Ltd</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
@@ -26,83 +26,78 @@
             </ul>
           </div>
         </div>
-      </nav>
+    </nav>
 
-    <!-- <nav class="navbar">
-        <div class="navbar-container">
-            <div class="navbar-brand">
-                <h1 class="navbar-title">BARTON & NICHOLS Ltd.</h1>
-                <h2 class="navbar-subtitle">The Motor Body Repair Centre</h2>
+    <main>
+
+        <section class="main-body">
+            <div class="overlay-main">
+                <p><strong>Address:</strong> Bryn Cefni Industrial Estate, Llangefni, Anglesey, LL77 7XA</p>
+                <p><strong>Tel:</strong> 01248 750 989</p>
+                <p><strong>Email:</strong> info@bartonandnichols.co.uk</p>
+                <a href="https://goo.gl/maps/MiekGEDhkpSDe5m4A" class="map-button">FIND US ON GOOGLE MAPS</a>
             </div>
-            <div class="navbar-links">
-                <a href="#about">About</a>
-                <a href="#contact">Contact</a>
+
+            <div class="overlay-bottom">
+                <div class="overlay-bottom-left">
+                    <img class="carsqa-img" src="./assets/CARSQA1000.png" alt="CARSQA1000">
+                </div>
+                <div class="overlay-bottom-right">
+                    <p>Established in 1996, we are the premier choice of repairers for North Wales. Approved and recognised by leading insurance companies and accident management companies, alike, we have achieved and maintained The British Standard for the Repair of Accident Damaged Vehicles, since its introduction in 2007.</p>
+                </div>
             </div>
-        </div>
-    </nav> -->
+        </section>
 
-
-    <section class="main-body">
-        <div class="overlay-main">
-            <p><strong>Address:</strong> Bryn Cefni Industrial Estate, Llangefni, Anglesey, LL77 7XA</p>
-            <p><strong>Tel:</strong> 01248 750 989</p>
-            <p><strong>Email:</strong> info@bartonandnichols.co.uk</p>
-            <a href="https://goo.gl/maps/MiekGEDhkpSDe5m4A" class="map-button">FIND US ON GOOGLE MAPS</a>
-        </div>
-
-        <div class="overlay-bottom-right">
-            <p>Established in 1996, we are the premier choice of repairers for North Wales. Approved and recognised by leading insurance companies and accident management companies, alike, we have achieved and maintained The British Standard for the Repair of Accident Damaged Vehicles, since its introduction in 2007.</p>
-        </div>
-    </section>
-
-    <section class="about-body" id="about">
-        <div class="about-overlay-main">
-            <h2>Have you been involved in an Accident or Collision?</h2>
-            <h4>Call us to book an Assessment or Repair 01248 750 153</h4>
-            <p>Established in 1996, Andy Barton, Carl Nichols and their team of Highly Skilled Body Repair Technicians, have a wealth of Skills and Experience. So when it comes to the Engineering Excellence required to reinstate an accident damaged vehicle, they are second to none. When it comes to First Class Customer Service, they are way ahead of the game</p>
-            <p>We offer a professional and friendly service for all your vehicle body repair needs. No Matter if you’re a domestic vehicle owner, an individual business user or a commercial fleet operator, we are here to help with your claim and your repair</p>
-        </div>
-
-        <div class="about-overlay-right">
-            <div class="box">
-                <h4>Efficient and Effective</h4>
-                <p>We employ the latest technology to ensure the minimum Key-to-Key time.</p>
-                <div class="tick">✔️</div>
+        <section class="about-body" id="about">
+            <div class="about-overlay-main">
+                <h2>Have you been involved in an Accident or Collision?</h2>
+                <h4>Call us to book an Assessment or Repair 01248 750 153</h4>
+                <p>Established in 1996, Andy Barton, Carl Nichols and their team of Highly Skilled Body Repair Technicians, have a wealth of Skills and Experience. So when it comes to the Engineering Excellence required to reinstate an accident damaged vehicle, they are second to none. When it comes to First Class Customer Service, they are way ahead of the game</p>
+                <p>We offer a professional and friendly service for all your vehicle body repair needs. No Matter if you’re a domestic vehicle owner, an individual business user or a commercial fleet operator, we are here to help with your claim and your repair</p>
             </div>
-            <div class="box">
-                <h4>Engineering Excellence</h4>
-                <p>We are vehicle body repair specialists, from the smallest scratch to major structural damage.</p>
-                <div class="tick">✔️</div>
+
+            <div class="about-overlay-right">
+                <div class="box">
+                    <h4>Efficient and Effective</h4>
+                    <p>We employ the latest technology to ensure the minimum Key-to-Key time.</p>
+                    <div class="tick">&#10003;</div>
+                </div>
+                <div class="box">
+                    <h4>Engineering Excellence</h4>
+                    <p>We are vehicle body repair specialists, from the smallest scratch to major structural damage.</p>
+                    <div class="tick">&#10003;</div>
+                </div>
+                <div class="box">
+                    <h4>Customer Service</h4>
+                    <p>From reception to delivery, our staff are trustworthy and client focussed, no matter your issue.</p>
+                    <div class="tick">&#10003;</div>
+                </div>
             </div>
-            <div class="box">
-                <h4>Customer Service</h4>
-                <p>From reception to delivery, our staff are trustworthy and client focussed, no matter your issue.</p>
-                <div class="tick">✔️</div>
-            </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- Contact Section -->
-<section class="contact-body" id="contact">
-        <div class="overlay-contact">
-            <h1>BARTON & NICHOLS</h1>
-            <h3>The Motor Body Repair Centre</h3>
-        </div>
+        <!-- Contact Section -->
+        <section class="contact-body" id="contact">
+                <div class="overlay-contact">
+                    <h1>BARTON & NICHOLS</h1>
+                    <p>The Motor Body Repair Centre</p>
+                </div>
 
-        <div class="overlay-why-us">
-            <h1>WHY CHOOSE US?</h1>
-            <h4>People are free to make their choice, but we pride ourselves on quality of our work and our customer services, and THAT’S why they choose</h4>
-            <h2>BARTON AND NICHOLS</h2>
-            <a href="#" class="contact-button">Contact Us</a>
-        </div>
+                <div class="overlay-why-us">
+                    <h1>WHY CHOOSE US?</h1>
+                    <p>People are free to make their choice, but we pride ourselves on quality of our work and our customer services, and THAT’S why they choose</p>
+                    <h2>BARTON AND NICHOLS</h2>
+                    <a href="#" class="contact-button">Contact Us</a>
+                </div>
 
-</section>
+        </section>
+
+    </main>
 
 <!-- Footer Section -->
 <footer class="footer">
-    <div class="container">
-        <p>&copy; <span id="year"></span> Barton & Nichols Ltd. All Rights Reserved | Powered by <a href="https://mjclifford.com" class="link">mjclifford.com</a></p>
-    </div>
+    <p>&copy; <span id="year"></span> Barton & Nichols Ltd. All Rights Reserved.<p>
+    <p class="foot-div">&nbsp;|&nbsp;</p>
+    <p>Powered by <a href="https://mjclifford.com" class="link">mjclifford.com</a></p>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
