change to open map in new tab

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <p><strong>Address:</strong> Bryn Cefni Industrial Estate, Llangefni, Anglesey, LL77 7XA</p>
                 <p><strong>Tel:</strong> 01248 750 989</p>
                 <p><strong>Email:</strong> info@bartonandnichols.co.uk</p>
-                <a href="https://goo.gl/maps/MiekGEDhkpSDe5m4A" class="map-button">FIND US ON GOOGLE MAPS</a>
+                <a href="https://goo.gl/maps/MiekGEDhkpSDe5m4A" target="_blank" class="map-button">FIND US ON GOOGLE MAPS</a>
             </div>
 
             <div class="overlay-bottom">
