--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <h1>WHY CHOOSE US?</h1>
                     <p>People are free to make their choice, but we pride ourselves on quality of our work and our customer services, and THAT’S why they choose</p>
                     <h2>BARTON AND NICHOLS</h2>
-                    <a href="#" class="contact-button">Contact Us</a>
+                    <a href="https://fs17.formsite.com/James386/form1-Contact-Me-B-N/index" target="_blank" class="contact-button">Contact Us</a>
                 </div>
 
         </section>
@@ -97,7 +97,7 @@
 <footer class="footer">
     <p>&copy; <span id="year"></span> Barton & Nichols Ltd. All Rights Reserved.<p>
     <p class="foot-div">&nbsp;|&nbsp;</p>
-    <p>Powered by <a href="https://mjclifford.com" class="link">mjclifford.com</a></p>
+    <p>Powered by <a href="https://mjclifford.com" target="_blank" class="link">mjclifford.com</a></p>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
